tests/errors/duplicate_pin_number.nm
component Main {
    pin FOO: input = 1;
    pin BAR: input = 1;
}